@OneToMany와 Cascade, OrphanRemoval 속성 활용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # none : ddl 작동x
 spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.show-sql=true
+# 실행되는 sql 확인
+spring.jpa.show-sql=true 
+# sql 깔끔하게 보기
 spring.jpa.properties.hibernate.format_sql=true
+# sql '?' 에 들어가는 값 확인 가능
 logging.level.org.hibernate.type.descriptor.sql=trace
 
