--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot_personal_project?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=sbadmin
+spring.datasource.username=root
 spring.datasource.password=!soaka8525
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
