--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
             <version>2.3.3.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
